tentei tudo mas não consegui fazer rodar com JSF